<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="home_parity_county">Los Angeles County</string>
    <string name="home_parity_county_compact">LA County</string>
    <string name="home_parity_change_preferences">Change Preferences</string>
    <string name="home_parity_more_actions">Home options</string>
    <string name="home_parity_map_summary">Map of LA County regional center areas. Yours is %1$s.</string>
    <string name="home_parity_map_summary_unmatched">Map of LA County regional center service areas.</string>
    <string name="home_parity_center_role">Regional centers coordinate evaluations, services, and funding for your family.</string>
...
